@@ -3,7 +3,7 @@ OpenEye-toolkits >= 2020.2.0
 numpy
 jsonschema >= 2.6.0
 rcsb.utils.io >= 0.95
-rcsb.db >= 1.656
+rcsb.db >= 1.664
 rcsb.utils.chemref >= 0.65
 rcsb.utils.chem >= 0.49
 rcsb.utils.citation >= 0.15
@@ -13,4 +13,5 @@ rcsb.utils.go >= 0.17
 rcsb.utils.seq >= 0.50
 rcsb.utils.struct >= 0.26
 rcsb.utils.taxonomy >= 0.31
+rcsb.utils.dictionary >= 0.22
 statistics; python_version < "3.0"
