@@ -43,7 +43,7 @@ setup(
         "jsonschema >= 2.6.0",
         "numpy",
         "rcsb.utils.io >= 0.95",
-        "rcsb.db >= 1.656",
+        "rcsb.db >= 1.664",
         "rcsb.utils.chemref >= 0.65",
         "rcsb.utils.chem >= 0.49",
         "rcsb.utils.citation >= 0.15",
@@ -53,6 +53,7 @@ setup(
         "rcsb.utils.go >= 0.17",
         "rcsb.utils.struct >= 0.26",
         "rcsb.utils.taxonomy >= 0.31",
+        "rcsb.utils.dictionary >= 0.22",
         'statistics; python_version < "3.0"',
     ],
     packages=find_packages(exclude=["rcsb.mock-data", "rcsb.exdb.tests-anal", "rcsb.exdb.tests-*", "tests.*"]),
